--- a/calculator/style.css
+++ b/calculator/style.css
@@ -1,30 +1,98 @@
 
-/* 전체 선택자 */ /**/
+/* 전체 선택자 */
 * {
     margin:0;
     padding: 0;
     box-sizing: border-box;
     /* box-sizing  박스의 크기를 어떤 것을 기준으로 계산할지를 정하는 속성
-    border-box  테두리를 기준으로 정한다는 의미*/
+    border-box  테두리를 기준으로 정한다는 의미
+    참고 링크: https://www.codingfactory.net/10630 */
     
 }
 
 /* body내의 선택자 */
 body {
     background-color: pink;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
 /* div로 묶은 계산기의 class를 지정해주는 부분 */
 .calculator {
-    border: 3px solid palevioletred; /*계산기의 테두리*/
+    
+    width: 287px; /*총 테두리와 패딩, 버튼 전부 다 더한 값*/
+    border: 1px solid palevioletred; /*계산기의 테두리*/
     background-color: #ccc; /* 계산기의 배경 색상: 회색으로 */
     padding: 5px; /**/
+    
 }
 
-.calculator form {
-    /*grid에 대한 링크: https://nykim.work/59 */
-    display: grid; /*grid는 두 방향(가로,세로) 레이아웃 시스템 */
-    grid-template-columns: repeat(4, 65px); 
-    grid-template-rows: 65px; /* 행의 높이 지정 */
 
+.calculator form {
+
+    /* grid 부분 */
+    display: grid; /* grid는 두 방향(가로,세로) 레이아웃 시스템(2차원) */
+    grid-template-columns: repeat(4, 65px); /* 열(가로)의 높이 지정, cols가 가로가 아니라 columns가 가로라는 의미 */
+    grid-auto-rows: 65px; /* 행(세로)의 높이 지정 */
+    grid-gap: 5px; /*gird의 간격(gap)을 설정해준다. */
+    /*
+    ->grid에 대한 설명
+    관련 링크: https://nykim.work/59 ( 엄청 자세하게 설명해놓음! )
+
+    ->gird-gap에 대한 설명
+    관련 링크: https://www.codingfactory.net/12441
+    */
+}
+
+/* class 선택자 .calculator 안에 form 안에 input 전부에 대한 설명
+자세히 보면 input type button이 적용된 곳에 검은 테두리가 있음 그거 전부 해주려고 설정해주는 것*/
+.calculator form input {
+    border: 2px solid rgb(255, 118, 140);
+    cursor: pointer; /* 버튼 위에 올렸을 때 마우스의 커서가 바뀌기 위해, 원래는 삼각형 모양에서 손가락 모양으로 바뀜 */
+    font-size: 19px;
+}
+/* 마우스가 button위에 올라갔을때 그림자가 생길 수 있게 적용해주는 부분 */
+.calculator form input:hover {
+    box-shadow: 1px 1px 2px #333;
+    /* 수평 그림자, 수직 그림자, 번짐의 정도, 그림자 색깔*/
+}
+
+/* 버튼 C(빨간색 버튼)에 대한 설정 */
+/* .calculator의 form태그 밑에 있는 .clear*/
+.calculator form .clear {
+    background-color: #ed4848;
+
+}
+
+/* 주황색 버튼 영역부분 */
+/* .calculator의 form태그 밑에 있는 .operatior */
+.calculator form .operatior {
+    background-color: orange;
+}
+
+/* 초록색 버튼 영역부분 */
+/* .calculator의 form태그 밑에 있는 .dot */
+.calculator form .dot {
+    background-color: green;
+}
+
+/*.calculator form 안에 있는 input type=text 가 들어간 부분을 적용해주는 것*/
+/*계산 결과가 나오는 화면을 넓게 지정해주기 위해*/
+.calculator form input[type='text'] {
+    grid-column: span 4;
+    text-align: right; /*계산기 화면에 결과값을 오른쪽 정렬*/
+    padding:0 10px;
+}
+
+/*c버튼 부분을 가로로 3칸 늘려주려고*/
+.calculator form .clear {
+    grid-column: span 3;
+}
+
+/* 등호버튼을 가로로 2칸 늘려주려고*/
+.calculator form .result {
+    grid-column: span 2;
 }
