--- a/calculator/style.css
+++ b/calculator/style.css
@@ -12,7 +12,7 @@
 
 /* body내의 선택자 */
 body {
-    background-color: pink;
+    background-color: ivory;
     
     /*display에 대한 부분 */
     display: flex;
@@ -51,7 +51,7 @@ body {
 /* class 선택자 .calculator 안에 form 안에 input 전부에 대한 설명
 자세히 보면 input type button이 적용된 곳에 검은 테두리가 있음 그거 전부 해주려고 설정해주는 것*/
 .calculator form input {
-    border: 2px solid rgb(255, 118, 140);
+    border: 2px solid rgb(230, 124, 142);
     cursor: pointer; /* 버튼 위에 올렸을 때 마우스의 커서가 바뀌기 위해, 원래는 삼각형 모양에서 손가락 모양으로 바뀜 */
     font-size: 19px;
 }
@@ -61,23 +61,23 @@ body {
     /* 수평 그림자, 수직 그림자, 번짐의 정도, 그림자 색깔*/
 }
 
-/* 버튼 C(빨간색 버튼)에 대한 설정 */
+/* 버튼 C에 대한 설정 */
 /* .calculator의 form태그 밑에 있는 .clear*/
 .calculator form .clear {
-    background-color: #ed4848;
+    background-color: #f5ebeb;
 
 }
 
-/* 주황색 버튼 영역부분 */
+/* /,*,+,-,= 버튼 영역부분 */
 /* .calculator의 form태그 밑에 있는 .operatior */
 .calculator form .operatior {
-    background-color: rgb(212, 121, 212);
+    background-color: ivory;
 }
 
-/* 초록색 버튼 영역부분 */
+/* . 버튼 영역부분 */
 /* .calculator의 form태그 밑에 있는 .dot */
 .calculator form .dot {
-    background-color: green;
+    background-color: rgb(255, 255, 255);
 }
 
 /*.calculator form 안에 있는 input type=text 가 들어간 부분을 적용해주는 것*/
@@ -102,3 +102,53 @@ body {
     색조합을 찾아주는 사이트
     링크: https://coolors.co/palettes/trending
 */
+
+#but_1 {
+    background-color: #fbf8cc; /*계산기의 배경색상*/
+    color:#333 /*계산기의 글자 색상*/
+}
+
+#but_2{
+    background-color: #fde4cf; /*계산기의 배경색상*/
+    color:#333 /*계산기의 글자 색상*/
+}
+
+#but_3{
+    background-color: #ffcfd2; /*계산기의 배경색상*/
+    color:#333 /*계산기의 글자 색상*/
+}
+
+#but_4{
+    background-color: #f1c0e8; /*계산기의 배경색상*/
+    color:#333 /*계산기의 글자 색상*/
+}
+
+#but_5{
+    background-color: #cfbaf0; /*계산기의 배경색상*/
+    color:#333 /*계산기의 글자 색상*/
+}
+
+#but_6{
+    background-color: #a3c4f3; /*계산기의 배경색상*/
+    color:#333 /*계산기의 글자 색상*/
+}
+
+#but_7{
+    background-color: #90dbf4; /*계산기의 배경색상*/
+    color:#333 /*계산기의 글자 색상*/
+}
+
+#but_8{
+    background-color: #8eecf5; /*계산기의 배경색상*/
+    color:#333 /*계산기의 글자 색상*/
+}
+
+#but_9{
+    background-color: #98f5e1; /*계산기의 배경색상*/
+    color:#333 /*계산기의 글자 색상*/
+}
+
+#but_0{
+    background-color: #b9fbc0; /*계산기의 배경색상*/
+    color:#333 /*계산기의 글자 색상*/
+}
