--- a/calculator/style.css
+++ b/calculator/style.css
@@ -15,43 +15,59 @@
 
 body {
     background-color: ivory;
-    /* display에 대한 부분 */
-    display: flex;
-    flex-direction: column; 
-    /*
+
+    /* display에 대한 부분
+    https://studiomeal.com/archives/197 <- flex에 대한 너무 너무 자세한 설명! 꼭 보기 */
     
-    */
-    justify-content: center;
-    align-items: center;
+    display: flex; /*flex는 가로 방향으로 배치됨, 자신이 가진 내용물의 width만큼 차지함*/
+    flex-direction: column; /*아이템을 열(세로,row)방향으로 배치함, 마치 요소들을 쌓아놓은 것 처럼 보임!! */
+    justify-content: center;/* Align the flex items at the center of the container, 컨테이너에 있는 플렉스 아이템을 가운데로 정렬함*/
+    align-items: center; /* 교차축을 기준으로 아이템을 정렬함 */
     height: 100vh;
+    /*부모의 값에 상관없이 값을 결정하고 싶을때 vh를 쓴다.
+    vh = view height 
+    관련 설명 링크: https://dream-frontend.tistory.com/27  */
     
 } 
 
-/*
-#calculator {
-    background-color: ivory;
-    /*display에 대한 부분 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
-*/
-
-/* Rainbow Calculator */
+/* Rainbow Calculator 라는 글자에 대한 속성 모음  */
 h1 {
     margin-bottom: 150px;
     font-size:2em;
-    font:bold 3.5vw/1.6 'Signika', sans-serif; 
+    font:bold 3.5vw/1.6 'Signika', sans-serif;  /*'Signika', sans-serif는 글꼴 지정*/
     user-select:none;
 }
 
-h1 span { display:inline-block; animation:float .2s ease-in-out infinite; }
- @keyframes float {
-  0%,100%{ transform:none; }
-  33%{ transform:translateY(-1px) rotate(-2deg); }
-  66%{ transform:translateY(1px) rotate(2deg); }
+h1 span { 
+    display:inline-block; /*가로로 배치*/
+    animation:float .2s ease-in-out infinite; 
 }
+/* 보류중
+body:hover span { animation:bounce .6s; }
+@keyframes bounce {
+  0%,100%{ transform:translate(0); }
+  25%{ transform:rotateX(20deg) translateY(2px) rotate(-3deg); }
+  50%{ transform:translateY(-20px) rotate(3deg) scale(1.1);  }
+}
+*/
+ @keyframes float {
+
+  0%,100%{ transform:none; } /*keyframes의 0%와 100%는 각각 시작과 끝을 의미함.*/
+  33%{ transform:translateY(-1px) rotate(-2deg); } /* translateY 좌표이동 , rotate(-2deg) 회전 */
+  66%{ transform:translateY(1px) rotate(2deg); } /* px와 deg는 단위일뿐*/
+
+  /*css에서 애니메이션 효과를 쓰려면 애니메이션에 대한 키프레임을 정의해야 한다.
+   @keyframes은 특정 '시간'에 해당하는 요소가 가져야 할 'css스타일'을 명시한다.
+   0%에는 처음 스타일을, 100%에는 마지막 스타일을 명시하고 중간에 원하는 수만큼의 키프페임을 생성할 수 있다.
+    참고링크: http://www.tcpschool.com/css/css3_transform_animation
+
+    transform은 변형 효과임. 해당 요소의 모양,크기,위치.회전,변형을 쓸 수 있다.
+
+
+
+    */
+}
+
 
 /* div로 묶은 계산기의 class를 지정해주는 부분 */
 .calculator {
