--- a/calculator/style.css
+++ b/calculator/style.css
@@ -14,7 +14,7 @@
 /* body내의 선택자 */
 
 body {
-    background-color: ivory;
+    background-color: rgb(255, 245, 245);
 
     /* display에 대한 부분
     https://studiomeal.com/archives/197 <- flex에 대한 너무 너무 자세한 설명! 꼭 보기 */
@@ -42,14 +42,7 @@ h1 span {
     display:inline-block; /*가로로 배치*/
     animation:float .2s ease-in-out infinite; 
 }
-/* 보류중
-body:hover span { animation:bounce .6s; }
-@keyframes bounce {
-  0%,100%{ transform:translate(0); }
-  25%{ transform:rotateX(20deg) translateY(2px) rotate(-3deg); }
-  50%{ transform:translateY(-20px) rotate(3deg) scale(1.1);  }
-}
-*/
+
  @keyframes float {
 
   0%,100%{ transform:none; } /*keyframes의 0%와 100%는 각각 시작과 끝을 의미함.*/
@@ -62,19 +55,55 @@ body:hover span { animation:bounce .6s; }
     참고링크: http://www.tcpschool.com/css/css3_transform_animation
 
     transform은 변형 효과임. 해당 요소의 모양,크기,위치.회전,변형을 쓸 수 있다.
-
-
-
     */
 }
+
+body:hover span { animation:bounce .6s; }
+@keyframes bounce {
+  0%,100%{ transform:translate(0); }
+  25%{ transform:rotateX(20deg) translateY(2px) rotate(-3deg); }
+  50%{ transform:translateY(-20px) rotate(3deg) scale(1.1);  }
+}
+
+
+span:nth-child(4n) { color:#e7c6ff; }
+span:nth-child(4n-1) { color:#e7c6ff;  }
+span:nth-child(4n-2) { color:#b8c0ff;  }
+span:nth-child(4n-3) { color:#bbd0ff; }
+
+/*바른 예시
+span:nth-child(4n) { color:hsl(50, 75%, 55%); text-shadow:1px 1px hsl(50, 75%, 45%), 2px 2px hsl(50, 45%, 45%), 3px 3px hsl(50, 45%, 45%), 4px 4px hsl(50, 75%, 45%); }
+span:nth-child(4n-1) { color:hsl(135, 35%, 55%); text-shadow:1px 1px hsl(135, 35%, 45%), 2px 2px hsl(135, 35%, 45%), 3px 3px hsl(135, 35%, 45%), 4px 4px hsl(135, 35%, 45%); }
+span:nth-child(4n-2) { color:hsl(155, 35%, 60%); text-shadow:1px 1px hsl(155, 25%, 50%), 2px 2px hsl(155, 25%, 50%), 3px 3px hsl(155, 25%, 50%), 4px 4px hsl(140, 25%, 50%); }
+span:nth-child(4n-3) { color:hsl(30, 65%, 60%); text-shadow:1px 1px hsl(30, 45%, 50%), 2px 2px hsl(30, 45%, 50%), 3px 3px hsl(30, 45%, 50%), 4px 4px hsl(30, 45%, 50%); }
+*/
+
+h1 span:nth-child(2){ animation-delay:.05s; }
+h1 span:nth-child(3){ animation-delay:.1s; }
+h1 span:nth-child(4){ animation-delay:.15s; }
+h1 span:nth-child(5){ animation-delay:.2s; }
+h1 span:nth-child(6){ animation-delay:.25s; }
+h1 span:nth-child(7){ animation-delay:.3s; }
+h1 span:nth-child(8){ animation-delay:.35s; }
+h1 span:nth-child(9){ animation-delay:.4s; }
+h1 span:nth-child(10){ animation-delay:.45s; }
+h1 span:nth-child(11){ animation-delay:.5s; }
+h1 span:nth-child(12){ animation-delay:.55s; }
+h1 span:nth-child(13){ animation-delay:.6s; }
+h1 span:nth-child(14){ animation-delay:.65s; }
+h1 span:nth-child(15){ animation-delay:.7s; }
+h1 span:nth-child(15){ animation-delay:.75s; } /* t */
+h1 span:nth-child(16){ animation-delay:.8s; }
+h1 span:nth-child(17){ animation-delay:.85s; }
+h1 span:nth-child(18){ animation-delay:.9s; } /* 무지개 임티부분 */
 
 
 /* div로 묶은 계산기의 class를 지정해주는 부분 */
 .calculator {
     
     width: 287px; /*총 테두리와 패딩, 버튼 전부 다 더한 값*/
-    border: 1px solid rgb(226, 107, 147); /*계산기의 테두리*/
-    background-color: rgb(241, 134, 134); /* 계산기의 배경 색상: 회색으로 */
+    border: 1px solid rgb(241, 191, 206); /*계산기의 테두리*/
+    background-color: rgb(233, 174, 191); /* 계산기의 배경 색상: 회색으로 */
     padding: 5px; /**/
     
 }
@@ -99,7 +128,7 @@ body:hover span { animation:bounce .6s; }
 /* class 선택자 .calculator 안에 form 안에 input 전부에 대한 설명
 자세히 보면 input type button이 적용된 곳에 검은 테두리가 있음 그거 전부 해주려고 설정해주는 것*/
 .calculator form input {
-    border: 2px solid rgb(230, 124, 142);
+    border: 2px solid rgb(245, 170, 170);
     cursor: pointer; /* 버튼 위에 올렸을 때 마우스의 커서가 바뀌기 위해, 원래는 삼각형 모양에서 손가락 모양으로 바뀜 */
     font-size: 19px;
 }
@@ -112,14 +141,14 @@ body:hover span { animation:bounce .6s; }
 /* 버튼 C에 대한 설정 */
 /* .calculator의 form태그 밑에 있는 .clear*/
 .calculator form .clear {
-    background-color: #f5ebeb;
+    background-color: #ffffff;
 
 }
 
 /* /,*,+,-,= 버튼 영역부분 */
 /* .calculator의 form태그 밑에 있는 .operatior */
 .calculator form .operatior {
-    background-color: ivory;
+    background-color: #ffffff;
 }
 
 /* . 버튼 영역부분 */
